enhanced with Optional class features